assets/stylesheet/style.css
p{
    font-size: 13px;
    font-family: Arial, Helvetica, sans-serif;
}

.ms-p{
    line-height: 16px;
}

.lh {
    font-size: 17px;
    line-height: 20px;
}

.section-header{
    color: rgba(3,3,3,.4);
    font-size: 16px;
}

.bg-secondary{
    background: #f4f5f6 !important;
}

.ff-1{
    font-family: 'Roboto Condensed', sans-serif;
}

.ff-2{
    font-family: Arial, Helvetica, sans-serif;
}

.bg-danger,
.btn-danger {
    background-color: #f72210 !important;
}

.text-danger{
    color: #f72210 !important;
}


.nav-links{
    display: none;
}

.position-relative a {
    left: 0;
    bottom: 0;
}

.btn-warning{
    background-color: #ffe400 !important;
}


.text-dark {
    color: #000 !important;
}

.w-35{
    width:35%;
}

.hf-1{
    height: 170px !important;
}

.vs{
    background-color: #000;
    color: #fff;
    border-radius: 100%;
    left: 45%;
    bottom: -33px;
}

.debate-hr{
    border-top: solid 1px #dee2e6;
    border-bottom: solid 1px #dee2e6;
    height: 1px;
}

.cover_a {
    left: 120px;
    bottom: 20px;

}

.cover_b {
    bottom: 10px;
    left: 170px;
}

/* .newsletter{
    /* background: url('/assets/img/starting5-homepage.png') center center / cover no-repeat; */
    
} */

@media screen and (max-width: 767px){
    .nav-desk{
        display: none !important;
    }

    .nav-mobile{
        display: flex !important;
    }
}

@media screen and (min-width: 768px){
    /* .grid{
        display: grid;
        grid-template-areas: 
        'featured tops'
        'featured turn'
        'featured more'
        'debate debate'
        'opinion opinion';
        justify-content: stretch;
    }

    .FSG{
        grid-area: featured;
    }
    
    .TSG{
        grid-area: tops;
    }

    .MTG{
        grid-area: turn;
    }

    .MSG{
        grid-area: more;
    }

    .TDG{
        width: 100%;
        grid-area: debate;
    }

    .OPG{
        grid-area: opinion;
    } */

    /* .left-column{
        position: sticky;
        top: 0;
        bottom: 1000px;
    } */

    /* .middle-column{
        bottom: 0;
        position: sticky;
    } */

    .magazine {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        grid-row-gap: 15px;
        grid-column-gap: 30px;
        padding-top: 10px;
    }

    .h-md-0 {
        height: 170px !important;
    }

    .mag-border {
        border-bottom: solid 0.5px #d9d9d9;
        padding-bottom: 10px;
    }

    .editor {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr;
    }

    .w-reset {
        width: 100% !important;
        height: auto !important;
    }

    .reset {
        width: 50% !important;
        height: auto !important;
    }

    .middle {
        border-top: solid 0.5px #d9d9d9 !important;
        border-bottom: solid 0.5px #d9d9d9 !important;
    }

    


}

@media screen and (min-width: 992px) {
    .img-mag {
        width: auto !important;
        height: 320px !important;
    }

    .editor-large {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        gap: 2px;
    }

    .side-menu {
        width: 650px;
    }

    .abs-img{
        position: relative;
    }

    .cover_b{
        position: absolute;
        left: 49%;
        top: 5%;
        height: 90%;
    }
    
    .sub-sec{
        height: 600px !important;
    }

    .w-35 {
        width: 45%;
    }

    .nav-top{
       height: 84px;
    }
    
    .logo-desk{
        width: auto;
        height:60px;
    }

    
   .newsletter {
    background-image: url('/assets/img/starting5-homepage.png');
    height: 100%;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
} 
   
}

